Исправлена конфигурация подключения к БД и работа с профилями